test_resources/lit_class/errors/test8.sem
frame : test8::A::self (mut self : mut &(mut test8::A), next : (dg ()-> void)[nullable])-> void {
    {
        if (next.func != null) (next.func)(next.closure)
    };
    {
        <unit-value>
    }
}
frame : test8::B::foo (self : &(test8::B))-> void {
    throw test8::ErrorB::self(new);
    <unit-value>
}
frame : test8::B::self::_22_9 (#{CLOSURE-VARREF} : *((mut &(mut test8::B), (dg ()-> void)[nullable])))-> void {
    if (next.func != null) (next.func)(next.closure)
}
frame : test8::B::self (mut self : mut &(mut test8::B), next : (dg ()-> void)[nullable])-> void {
    test8::A::self(self, {&((self, next));(#{CLOSURE-VARREF} : *((mut &(mut test8::B), (dg ()-> void)[nullable])))-> void});
    {
        <unit-value>
    }
}
frame : test8::Error::self::_3_9 (#{CLOSURE-VARREF} : *((mut &(mut test8::Error), (dg ()-> void)[nullable])))-> void {
    if (next.func != null) (next.func)(next.closure)
}
frame : test8::Error::self (mut self : mut &(mut test8::Error), next : (dg ()-> void)[nullable])-> void {
    core::exception::Exception::self(self, {&((self, next));(#{CLOSURE-VARREF} : *((mut &(mut test8::Error), (dg ()-> void)[nullable])))-> void});
    {
        <unit-value>
    }
}
frame : test8::ErrorB::self::_7_9 (#{CLOSURE-VARREF} : *((mut &(mut test8::ErrorB), (dg ()-> void)[nullable])))-> void {
    if (next.func != null) (next.func)(next.closure)
}
frame : test8::ErrorB::self (mut self : mut &(mut test8::ErrorB), next : (dg ()-> void)[nullable])-> void {
    test8::Error::self(self, {&((self, next));(#{CLOSURE-VARREF} : *((mut &(mut test8::ErrorB), (dg ()-> void)[nullable])))-> void});
    {
        <unit-value>
    }
}
